--- a/assets/scss/_root.scss
+++ b/assets/scss/_root.scss
@@ -109,6 +109,24 @@ html{
     color: #c7a243;
   }
 }
+
+.btn-danger{
+  display: inline-block;
+  font-size: 14px;
+  padding: 8px 10px 8px;
+  @media screen and (min-width: 992px) {
+    font-size: 18px;
+    padding: 8px 30px 8px;
+  }
+  border-width: 2px;
+  border-style: solid;
+  color: #ffffff;
+  background-color: #d31c1c;
+  border-color: #d31c1c;
+  border-radius: 0;
+  transition: all .3s;
+}
+
 .btn-delete{
   position: relative;
   display: inline-block;
@@ -121,6 +139,9 @@ html{
   border-color: #d31c1c;
   border-radius: 0;
   transition: all .3s;
+}
+.color--theme{
+  color: #c7a243;
 }
 .wrap-image-animation {
   margin: auto auto auto 13px;
@@ -910,6 +931,52 @@ html{
     &:hover{
       img{
         transform: scale(1.1);
+      }
+    }
+  }
+}
+
+.wrap-icon-fixed{
+  position: fixed;
+  bottom: 15px;
+  left: 15px;
+  z-index: 20;
+  @media (min-width: 991px) {
+    bottom: 20px;
+    left: 20px;
+  }
+  ul{
+    li{
+      margin-bottom: 10px;
+      &:last-child{
+        margin-bottom: 0;
+      }
+      a{
+        width: 40px;
+        height: 40px;
+        background-color: #fff;
+        border-radius: 50%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0 5px 10px 0 rgba(0, 0, 0, .12);
+        @media (min-width: 991px) {
+          width: 50px;
+          height: 50px;
+        }
+        img{
+          width: 30px;
+          @media (min-width: 991px) {
+            width: 40px;
+          }
+        }
+        i{
+          font-size: 30px;
+          @media (min-width: 991px) {
+            font-size: 40px;
+          }
+        }
       }
     }
   }
