--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -247,8 +247,6 @@
       box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.15);
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
-
       &.active {
         transform: unset;
       }
@@ -1019,10 +1017,11 @@
               position: relative;
               color: #c7a243;
               letter-spacing: 0.5px;
-              @include PinyonScript();
               margin-bottom: 30px;
               display: inline-block;
-
+              @media screen and (max-width: 991px) {
+                font-size: 20px;
+              }
               &:before {
                 bottom: 0;
                 content: '';
@@ -1496,10 +1495,11 @@
                 position: relative;
                 color: #c7a243;
                 letter-spacing: 0.5px;
-                @include PinyonScript();
                 margin-bottom: 30px;
                 display: inline-block;
-
+                @media screen and (max-width: 991px) {
+                  font-size: 20px;
+                }
                 &:before {
                   bottom: 0;
                   content: '';
