--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1368,6 +1368,57 @@ html {
         overflow: hidden;
         text-overflow: ellipsis;
         text-shadow: 1px 1px 3px #222; }
+      .bl_frontend .main .section-slider .content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        width: 1100px;
+        max-width: 100%;
+        padding: 40px 15px; }
+        .bl_frontend .main .section-slider .content .sub_title {
+          font-family: 'PinyonScript', sans-serif;
+          font-size: 65px;
+          font-weight: 500;
+          color: #c7a243;
+          text-shadow: 1px 1px 3px #222; }
+          @media screen and (max-width: 991px) {
+            .bl_frontend .main .section-slider .content .sub_title {
+              font-size: 30px; } }
+        .bl_frontend .main .section-slider .content .title {
+          font-family: var(--title-font);
+          font-size: 50px;
+          font-weight: 500;
+          line-height: 1.2;
+          letter-spacing: -.025em;
+          color: #fff;
+          word-break: break-word;
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          text-shadow: 1px 1px 3px #222;
+          margin-bottom: 20px; }
+          @media screen and (max-width: 991px) {
+            .bl_frontend .main .section-slider .content .title {
+              font-size: 30px; } }
+        .bl_frontend .main .section-slider .content .description {
+          color: #fff;
+          font-size: 18px;
+          word-break: break-word;
+          display: -webkit-box;
+          -webkit-line-clamp: 4;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          text-shadow: 1px 1px 3px #222;
+          line-height: 1.4;
+          margin-bottom: 20px; }
+          @media screen and (max-width: 991px) {
+            .bl_frontend .main .section-slider .content .description {
+              font-size: 13px; } }
     .bl_frontend .main .section-banner {
       background-color: rgba(0, 0, 0, 0.05);
       padding: 150px 0 80px;
@@ -1588,6 +1639,50 @@ html {
             -webkit-box-orient: vertical;
             overflow: hidden;
             text-overflow: ellipsis; }
+    .bl_frontend .main .section-counter {
+      border-top: 1px solid #c7a243; }
+      .bl_frontend .main .section-counter .wrapper .counter {
+        margin-right: 30px;
+        width: 200px;
+        height: 200px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #f4f1ea;
+        border-radius: 50%;
+        transition: all .3s;
+        padding: 15px; }
+        @media screen and (max-width: 991px) {
+          .bl_frontend .main .section-counter .wrapper .counter {
+            margin-right: 15px;
+            width: 110px;
+            height: 110px; } }
+        .bl_frontend .main .section-counter .wrapper .counter:last-child {
+          margin-right: 0; }
+        .bl_frontend .main .section-counter .wrapper .counter:hover {
+          box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.12); }
+        .bl_frontend .main .section-counter .wrapper .counter .wrap {
+          text-align: center; }
+          .bl_frontend .main .section-counter .wrapper .counter .wrap .text {
+            display: inline-block;
+            font-size: 18px;
+            color: #041527;
+            line-height: 1.2;
+            min-height: 43px; }
+            @media screen and (max-width: 991px) {
+              .bl_frontend .main .section-counter .wrapper .counter .wrap .text {
+                font-size: 13px;
+                min-height: 32px; } }
+        .bl_frontend .main .section-counter .wrapper .counter .count {
+          margin-bottom: 15px;
+          color: #c7a243;
+          font-weight: bold;
+          font-size: 35px;
+          display: inline-block; }
+          @media screen and (max-width: 991px) {
+            .bl_frontend .main .section-counter .wrapper .counter .count {
+              margin-bottom: 6px;
+              font-size: 19px; } }
     .bl_frontend .main .section-about-chef .section-content .wrap-content .description {
       max-width: 1024px;
       margin: 0 auto 30px;
