--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -625,6 +625,58 @@
         @include line_text(3);
         text-shadow: 1px 1px 3px #222;
       }
+      .content{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        width: 1100px;
+        max-width: 100%;
+        padding: 40px 15px;
+        @media screen and (max-width: 991px) {
+
+        }
+        .sub_title {
+          @include PinyonScript();
+          font-size: 65px;
+          font-weight: 500;
+          color: #c7a243;
+          text-shadow: 1px 1px 3px #222;
+          @media screen and (max-width: 991px) {
+            font-size: 30px;
+          }
+        }
+
+        .title {
+          font-family: var(--title-font);
+          font-size: 50px;
+          font-weight: 500;
+          line-height: 1.2;
+          letter-spacing: -.025em;
+          color: #fff;
+          @include line_text(2);
+          text-shadow: 1px 1px 3px #222;
+          margin-bottom: 20px;
+          @media screen and (max-width: 991px) {
+            font-size: 30px;
+
+          }
+        }
+
+        .description {
+          color: #fff;
+          font-size: 18px;
+          @include line_text(4);
+          text-shadow: 1px 1px 3px #222;
+          line-height: 1.4;
+          margin-bottom: 20px;
+          @media screen and (max-width: 991px) {
+            font-size: 13px;
+
+          }
+        }
+      }
     }
 
     .section-banner {
@@ -930,7 +982,59 @@
         }
       }
     }
-
+    .section-counter{
+      border-top: 1px solid #c7a243;
+      .wrapper{
+        .counter{
+          margin-right: 30px;
+          width: 200px;
+          height: 200px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background-color: #f4f1ea;
+          border-radius: 50%;
+          transition: all .3s;
+          padding: 15px;
+          @media screen and (max-width: 991px) {
+            margin-right: 15px;
+            width: 110px;
+            height: 110px;
+          }
+          &:last-child{
+            margin-right: 0;
+          }
+          &:hover{
+            box-shadow: 0 10px 20px 0 rgba(0, 0, 0, .12);
+          }
+          .wrap{
+            text-align: center;
+            .text{
+              display: inline-block;
+              font-size: 18px;
+              color: #041527;
+              line-height: 1.2;
+              min-height: 43px;
+              @media screen and (max-width: 991px) {
+                font-size: 13px;
+                min-height: 32px;
+              }
+            }
+          }
+          .count{
+            margin-bottom: 15px;
+            color: #c7a243;
+            font-weight: bold;
+            font-size: 35px;
+            display: inline-block;
+            @media screen and (max-width: 991px) {
+              margin-bottom: 6px;
+              font-size: 19px;
+            }
+          }
+        }
+      }
+    }
     .section-about-chef {
       .section-content {
         .wrap-content {
@@ -2895,6 +2999,7 @@
             border-color: #c7a243;
           }
         }
+
 
         .separator-line {
           display: flex;
