--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -6,16 +6,15 @@
   color: #505050;
   position: relative;
   @media screen and (max-width: 991px) {
-    font-size: 14px;
+    font-size: size(14);
   }
-
   .header {
     background-color: #000;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1000;
+    z-index: 9999;
     transition: all .3s linear;
 
     &.up {
@@ -30,6 +29,13 @@
       min-height: 78px;
 
       .logo {
+
+        @media screen and (max-width: 991px) {
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+        }
         img {
           height: 65px;
           width: auto;
@@ -437,7 +443,7 @@
           font-weight: 400;
           color: #b7b7b7;
           @media screen and (max-width: 991px) {
-            font-size: 25px;
+            font-size: 22px;
           }
         }
       }
@@ -450,7 +456,7 @@
           color: #041527;
           text-transform: capitalize;
           @media screen and (max-width: 991px) {
-            font-size: 27px;
+            font-size: 24px;
           }
         }
       }
@@ -477,7 +483,6 @@
           content: "";
           position: absolute;
           display: block;
-          left: 0;
           right: auto;
           bottom: 40px;
           width: 180px;
@@ -821,6 +826,9 @@
               width: 100%;
               color: #ffffff;
               transition: all 0.3s linear;
+              @media screen and (max-width: 991px) {
+                letter-spacing: 0;
+              }
             }
           }
 
@@ -998,8 +1006,8 @@
           padding: 15px;
           @media screen and (max-width: 991px) {
             margin-right: 15px;
-            width: 110px;
-            height: 110px;
+            width: 120px;
+            height: 120px;
           }
           &:last-child{
             margin-right: 0;
@@ -1117,7 +1125,7 @@
 
             > * {
               font-size: 40px;
-              font-weight: 400;
+              font-weight: 700;
               position: relative;
               color: #c7a243;
               letter-spacing: 0.5px;
@@ -1186,31 +1194,10 @@
                   color: #c7a243;
                   background-color: #fff;
                   border: 1px solid #c7a243;
-                  // &.rank-a{
-                  //   color: #fff;
-                  //   background-color: #198754;
-                  //   border-color: #198754;
-                  // }
-                  // &.rank-b{
-                  //   color: #fff;
-                  //   background-color: #0d6efd;
-                  //   border-color: #0d6efd;
-                  // }
-                  // &.rank-c{
-                  //   color: #000;
-                  //   background-color: #ffc107;
-                  //   border-color: #ffc107;
-                  // }
-                  // &.rank-d{
-                  //   color: #000;
-                  //   background-color: #0dcaf0;
-                  //   border-color: #0dcaf0;
-                  // }
-                  // &.rank-e{
-                  //   color: #fff;
-                  //   background-color: #dc3545;
-                  //   border-color: #dc3545;
-                  // }
+                  @media screen and (max-width: 991px) {
+                    padding: 1px 5px;
+                    font-size: 8px;
+                  }
                 }
               }
 
@@ -1517,6 +1504,16 @@
             }
 
             .wrap-form-check {
+              .row{
+                @media screen and (max-width: 991px) {
+                  margin: 0 -5px;
+                }
+                >*{
+                  @media screen and (max-width: 991px) {
+                    padding: 0 5px;
+                  }
+                }
+              }
               .form-check {
                 padding: 20px 15px;
                 display: flex;
@@ -1544,6 +1541,9 @@
                   margin-top: 0;
                   @media screen and (max-width: 991px) {
                     margin: 0 0 10px;
+                    border: 1px solid #D9D9D9;
+                    width: 15px;
+                    height: 15px;
                   }
                   &:checked[type=checkbox] {
                     border-color: #c7a243;
@@ -1606,7 +1606,7 @@
 
               > * {
                 font-size: 40px;
-                font-weight: 400;
+                font-weight: 700;
                 position: relative;
                 color: #c7a243;
                 letter-spacing: 0.5px;
@@ -1650,7 +1650,7 @@
                     margin-right: 20px;
                   }
                   @media screen and (max-width: 991px) {
-                    width: 100%;
+                    width: 100px;
                     height: auto;
                     margin-bottom: 10px;
                   }
@@ -1675,39 +1675,21 @@
                     color: #c7a243;
                     background-color: #fff;
                     border: 1px solid #c7a243;
-                    // &.rank-a{
-                    //   color: #fff;
-                    //   background-color: #198754;
-                    //   border-color: #198754;
-                    // }
-                    // &.rank-b{
-                    //   color: #fff;
-                    //   background-color: #0d6efd;
-                    //   border-color: #0d6efd;
-                    // }
-                    // &.rank-c{
-                    //   color: #000;
-                    //   background-color: #ffc107;
-                    //   border-color: #ffc107;
-                    // }
-                    // &.rank-d{
-                    //   color: #000;
-                    //   background-color: #0dcaf0;
-                    //   border-color: #0dcaf0;
-                    // }
-                    // &.rank-e{
-                    //   color: #fff;
-                    //   background-color: #dc3545;
-                    //   border-color: #dc3545;
-                    // }
+                    @media screen and (max-width: 991px) {
+                      padding: 1px 5px;
+                      font-size: 8px;
+                    }
                   }
                 }
 
                 .content {
+                  width: 100%;
                   @media screen and (min-width: 992px) {
                     width: calc(100% - 200px);
                   }
-
+                  @media screen and (max-width: 991px) {
+                    width: calc(100% - 115px);
+                  }
                   .title {
                     position: relative;
                     width: 100%;
@@ -1716,6 +1698,9 @@
                       display: flex;
                       flex-direction: row;
                       justify-content: space-between;
+                    }
+                    @media screen and (max-width: 991px) {
+                      margin-bottom: 0;
                     }
                     &:after {
                       border-color: #eaeaeb;
@@ -1745,7 +1730,7 @@
                         padding-right: 15px;
                       }
                       @media screen and (max-width: 991px) {
-                        font-size: 14px;
+                        font-size: 13px;
                       }
                     }
 
@@ -1754,7 +1739,9 @@
                       @media screen and (min-width: 992px) {
                         padding-left: 15px;
                       }
-
+                      @media screen and (max-width: 991px) {
+                        display: flex;
+                      }
                       .price {
                         transition: all .5s ease 0s;
                         color: #041527;
@@ -1763,7 +1750,7 @@
                         line-height: 1.4;
                         height: 30px;
                         @media screen and (max-width: 991px) {
-                          font-size: 14px;
+                          font-size: 13px;
                           height: auto;
                         }
                       }
@@ -1778,8 +1765,9 @@
                     line-height: 2;
                     margin-bottom: 15px;
                     @media screen and (max-width: 991px) {
-                      font-size: 14px;
-                      line-height: 1.4;
+                      font-size: 12px;
+                      line-height: 1.3;
+                      margin-bottom: 5px;
                     }
                   }
 
@@ -1787,7 +1775,9 @@
                     text-align: left;
                     a{
                       @media screen and (max-width: 991px) {
-                        padding: 3px 10px 3px;
+                        padding: 1px 10px 1px;
+                        font-size: 13px;
+                        line-height: 1;
                         margin: 0;
                       }
                       &::after,&::before{
@@ -1807,12 +1797,21 @@
                       top: 0;
                       right: 0;
                       font-size: 50px;
-                      color: #008000;
+                      color: #008000 !important;
+                      @media screen and (max-width: 991px) {
+                        font-size: 20px;
+                      }
                     }
                   }
                   .content{
                     .name, .w-price{
                       background-color: #faebd7;
+                    }
+                  }
+                  .btn_select_food{
+                    @media screen and (max-width: 991px) {
+                      border-color: #008000;
+                      background-color: #008000;
                     }
                   }
                 }
@@ -1955,39 +1954,21 @@
                   color: #c7a243;
                   background-color: #fff;
                   border: 1px solid #c7a243;
-                  // &.rank-a{
-                  //   color: #fff;
-                  //   background-color: #198754;
-                  //   border-color: #198754;
-                  // }
-                  // &.rank-b{
-                  //   color: #fff;
-                  //   background-color: #0d6efd;
-                  //   border-color: #0d6efd;
-                  // }
-                  // &.rank-c{
-                  //   color: #000;
-                  //   background-color: #ffc107;
-                  //   border-color: #ffc107;
-                  // }
-                  // &.rank-d{
-                  //   color: #000;
-                  //   background-color: #0dcaf0;
-                  //   border-color: #0dcaf0;
-                  // }
-                  // &.rank-e{
-                  //   color: #fff;
-                  //   background-color: #dc3545;
-                  //   border-color: #dc3545;
-                  // }
+                  @media screen and (max-width: 991px) {
+                    padding: 1px 5px;
+                    font-size: 8px;
+                  }
                 }
               }
 
               .content {
+                width: 100%;
                 @media screen and (min-width: 992px) {
                   width: calc(100% - 200px);
                 }
-
+                @media screen and (max-width: 991px) {
+                  width: calc(100% - 115px);
+                }
                 .title {
                   position: relative;
                   width: 100%;
@@ -1996,6 +1977,9 @@
                     display: flex;
                     flex-direction: row;
                     justify-content: space-between;
+                  }
+                  @media screen and (max-width: 991px) {
+                    margin-bottom: 0;
                   }
                   &:after {
                     border-color: #eaeaeb;
@@ -2025,7 +2009,7 @@
                       padding-right: 15px;
                     }
                     @media screen and (max-width: 991px) {
-                      font-size: 14px;
+                      font-size: 13px;
                     }
                   }
 
@@ -2034,7 +2018,9 @@
                     @media screen and (min-width: 992px) {
                       padding-left: 15px;
                     }
-
+                    @media screen and (max-width: 991px) {
+                      display: flex;
+                    }
                     .price {
                       transition: all .5s ease 0s;
                       color: #041527;
@@ -2043,7 +2029,7 @@
                       line-height: 1.4;
                       height: 30px;
                       @media screen and (max-width: 991px) {
-                        font-size: 14px;
+                        font-size: 13px;
                         height: auto;
                       }
                     }
@@ -2058,8 +2044,9 @@
                   line-height: 2;
                   margin-bottom: 15px;
                   @media screen and (max-width: 991px) {
-                    font-size: 14px;
-                    line-height: 1.4;
+                    font-size: 12px;
+                    line-height: 1.3;
+                    margin-bottom: 5px;
                   }
                 }
 
@@ -2067,9 +2054,10 @@
                   text-align: left;
                   a{
                     @media screen and (max-width: 991px) {
-                      padding: 3px 10px 3px;
+                      padding: 1px 10px 1px;
+                      font-size: 13px;
+                      line-height: 1;
                       margin: 0;
-                      font-size: 12px;
                     }
                     &::after,&::before{
                       @media screen and (max-width: 991px) {
@@ -2079,6 +2067,7 @@
                   }
                 }
               }
+
               &.active {
                 background-color: #faebd7;
                 .image {
@@ -2216,7 +2205,7 @@
                   margin-right: 20px;
                 }
                 @media screen and (max-width: 991px) {
-                  width: 100%;
+                  width: 100px;
                   height: auto;
                   margin-bottom: 10px;
                 }
@@ -2241,39 +2230,21 @@
                   color: #c7a243;
                   background-color: #fff;
                   border: 1px solid #c7a243;
-                  // &.rank-a{
-                  //   color: #fff;
-                  //   background-color: #198754;
-                  //   border-color: #198754;
-                  // }
-                  // &.rank-b{
-                  //   color: #fff;
-                  //   background-color: #0d6efd;
-                  //   border-color: #0d6efd;
-                  // }
-                  // &.rank-c{
-                  //   color: #000;
-                  //   background-color: #ffc107;
-                  //   border-color: #ffc107;
-                  // }
-                  // &.rank-d{
-                  //   color: #000;
-                  //   background-color: #0dcaf0;
-                  //   border-color: #0dcaf0;
-                  // }
-                  // &.rank-e{
-                  //   color: #fff;
-                  //   background-color: #dc3545;
-                  //   border-color: #dc3545;
-                  // }
+                  @media screen and (max-width: 991px) {
+                    padding: 1px 5px;
+                    font-size: 8px;
+                  }
                 }
               }
 
               .content {
+                width: 100%;
                 @media screen and (min-width: 992px) {
                   width: calc(100% - 200px);
                 }
-
+                @media screen and (max-width: 991px) {
+                  width: calc(100% - 115px);
+                }
                 .title {
                   position: relative;
                   width: 100%;
@@ -2282,6 +2253,9 @@
                     display: flex;
                     flex-direction: row;
                     justify-content: space-between;
+                  }
+                  @media screen and (max-width: 991px) {
+                    margin-bottom: 0;
                   }
                   &:after {
                     border-color: #eaeaeb;
@@ -2311,7 +2285,7 @@
                       padding-right: 15px;
                     }
                     @media screen and (max-width: 991px) {
-                      font-size: 14px;
+                      font-size: 13px;
                     }
                   }
 
@@ -2320,7 +2294,9 @@
                     @media screen and (min-width: 992px) {
                       padding-left: 15px;
                     }
-
+                    @media screen and (max-width: 991px) {
+                      display: flex;
+                    }
                     .price {
                       transition: all .5s ease 0s;
                       color: #041527;
@@ -2329,7 +2305,7 @@
                       line-height: 1.4;
                       height: 30px;
                       @media screen and (max-width: 991px) {
-                        font-size: 14px;
+                        font-size: 13px;
                         height: auto;
                       }
                     }
@@ -2344,8 +2320,9 @@
                   line-height: 2;
                   margin-bottom: 15px;
                   @media screen and (max-width: 991px) {
-                    font-size: 14px;
-                    line-height: 1.4;
+                    font-size: 12px;
+                    line-height: 1.3;
+                    margin-bottom: 5px;
                   }
                 }
 
@@ -2353,9 +2330,10 @@
                   text-align: left;
                   a{
                     @media screen and (max-width: 991px) {
-                      padding: 3px 10px 3px;
+                      padding: 1px 10px 1px;
+                      font-size: 13px;
+                      line-height: 1;
                       margin: 0;
-                      font-size: 12px;
                     }
                     &::after,&::before{
                       @media screen and (max-width: 991px) {
@@ -2365,6 +2343,7 @@
                   }
                 }
               }
+
               &.active {
                 background-color: #faebd7;
                 .image {
