--- a/assets/scss/_mixin.scss
+++ b/assets/scss/_mixin.scss
@@ -39,3 +39,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+@function size($number, $windowWidth: 375) {
+  $result: 100 * $number / $windowWidth;
+  @return $result * 1vw;
+}
