--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1110,6 +1110,9 @@ html {
       box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.15);
       display: flex;
       flex-direction: column; }
+      @media screen and (max-width: 991px) {
+        .bl_frontend .header .wrap_cart {
+          padding-bottom: 110px; } }
       .bl_frontend .header .wrap_cart.active {
         transform: unset; }
       .bl_frontend .header .wrap_cart.scroll {
@@ -1888,16 +1891,16 @@ html {
           @media screen and (max-width: 991px) {
             .bl_frontend .main .section-menu .section-content .wrap-list-menu .wrapper .item .content .wrap-btn a::after, .bl_frontend .main .section-menu .section-content .wrap-list-menu .wrapper .item .content .wrap-btn a::before {
               display: none; } }
-        .bl_frontend .main .section-menu .section-content .wrap-list-menu .wrapper .item.active {
+        .bl_frontend .main .section-menu .section-content .wrap-list-menu .wrapper .item.active, .bl_frontend .main .section-menu .section-content .wrap-list-menu .wrapper .item .active {
           background-color: #faebd7; }
-          .bl_frontend .main .section-menu .section-content .wrap-list-menu .wrapper .item.active .image::after {
+          .bl_frontend .main .section-menu .section-content .wrap-list-menu .wrapper .item.active .image::after, .bl_frontend .main .section-menu .section-content .wrap-list-menu .wrapper .item .active .image::after {
             content: '\2714';
             position: absolute;
             top: 0;
             right: 0;
             font-size: 50px;
             color: #008000; }
-          .bl_frontend .main .section-menu .section-content .wrap-list-menu .wrapper .item.active .content .name, .bl_frontend .main .section-menu .section-content .wrap-list-menu .wrapper .item.active .content .w-price {
+          .bl_frontend .main .section-menu .section-content .wrap-list-menu .wrapper .item.active .content .name, .bl_frontend .main .section-menu .section-content .wrap-list-menu .wrapper .item.active .content .w-price, .bl_frontend .main .section-menu .section-content .wrap-list-menu .wrapper .item .active .content .name, .bl_frontend .main .section-menu .section-content .wrap-list-menu .wrapper .item .active .content .w-price {
             background-color: #faebd7; }
     .bl_frontend .main .section-ordering-steps .section-content .item {
       height: 100%;
@@ -2267,6 +2270,7 @@ html {
                 background-color: #faebd7; }
               @media screen and (max-width: 991px) {
                 .bl_frontend .main .section-list-service .section-content .wrap-choice-menu .wrap-list-menu .wrapper .item.active .btn_select_food {
+                  color: #fff;
                   border-color: #008000;
                   background-color: #008000; } }
     .bl_frontend .main .section-list-service .section-content .nav-pills {
@@ -2437,16 +2441,16 @@ html {
             @media screen and (max-width: 991px) {
               .bl_frontend .main .section-list-service .section-content .tab-content .wrap-list-menu .item .content .wrap-btn a::after, .bl_frontend .main .section-list-service .section-content .tab-content .wrap-list-menu .item .content .wrap-btn a::before {
                 display: none; } }
-        .bl_frontend .main .section-list-service .section-content .tab-content .wrap-list-menu .item.active {
+        .bl_frontend .main .section-list-service .section-content .tab-content .wrap-list-menu .item.active, .bl_frontend .main .section-list-service .section-content .tab-content .wrap-list-menu .item .active {
           background-color: #faebd7; }
-          .bl_frontend .main .section-list-service .section-content .tab-content .wrap-list-menu .item.active .image::after {
+          .bl_frontend .main .section-list-service .section-content .tab-content .wrap-list-menu .item.active .image::after, .bl_frontend .main .section-list-service .section-content .tab-content .wrap-list-menu .item .active .image::after {
             content: '\2714';
             position: absolute;
             top: 0;
             right: 0;
             font-size: 50px;
             color: #008000; }
-          .bl_frontend .main .section-list-service .section-content .tab-content .wrap-list-menu .item.active .content .name, .bl_frontend .main .section-list-service .section-content .tab-content .wrap-list-menu .item.active .content .w-price {
+          .bl_frontend .main .section-list-service .section-content .tab-content .wrap-list-menu .item.active .content .name, .bl_frontend .main .section-list-service .section-content .tab-content .wrap-list-menu .item.active .content .w-price, .bl_frontend .main .section-list-service .section-content .tab-content .wrap-list-menu .item .active .content .name, .bl_frontend .main .section-list-service .section-content .tab-content .wrap-list-menu .item .active .content .w-price {
             background-color: #faebd7; }
     .bl_frontend .main .section-menu-service .section-title {
       margin-bottom: 50px; }
